// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should match snapshot 1`] = `
Object {
  "data": Object {
    "upsertGauge": Object {
      "code": "nor3",
      "cron": "10 * * * *",
      "enabled": false,
      "flowUnit": "m3/s",
      "language": "en",
      "levelUnit": "cm",
      "location": Object {
        "coordinates": Array [
          11.1,
          12.2,
          1.1,
        ],
        "kind": "gauge",
        "language": "en",
      },
      "name": "norway gauge 3",
      "requestParams": Object {
        "foo": "bar",
      },
      "source": Object {
        "language": "en",
        "name": "Norway",
      },
      "url": "http://nve.no/nor3",
    },
  },
}
`;

exports[`resolvers chain should throw on invalid input 1`] = `
Object {
  "data": Object {
    "upsertGauge": null,
  },
  "errors": Array [
    [GraphQLError: Invalid input],
  ],
}
`;

exports[`update should match snapshot 1`] = `
Object {
  "data": Object {
    "upsertGauge": Object {
      "code": "gal1",
      "cron": "10 * * * *",
      "enabled": true,
      "flowUnit": "cm3/s",
      "language": "en",
      "levelUnit": "m",
      "location": Object {
        "coordinates": Array [
          11.1,
          12.2,
          1.1,
        ],
        "kind": "gauge",
        "language": "en",
      },
      "name": "GALICIA GAUGE 1",
      "requestParams": Object {
        "lol": "fun",
      },
      "source": Object {
        "language": "en",
        "name": "Galicia",
      },
      "url": "http://galic.ia/gal1",
    },
  },
}
`;
